chore: still developing register
